ghost/templates/photoprism-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: photoprism
spec:
  ports:
    - port: 80
      targetPort: 2342
  selector:
    app: photoprism
