ghost/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghost
  labels:
    app: ghost
spec:
  ports:
    - port: 80
      targetPort: 2368
  selector:
    app: ghost
