ghost/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ghost-ingress
  namespace: ghost
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-stage"
spec:
  tls:
  - hosts:
    - ghost.512.ch
    secretName: ghost-tls
  rules:
  - host: ghost.512.ch
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: ghost 
            port:
              number: 80
